feat: 增加2个页面

--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.vue src",
+    "lint": "eslint --ext .jsx,.ts,.tsx,.vue src",
     "lint:fix": "eslint src test --fix",
     "lint:eslint": "eslint src/**/*.{ts,tsx,vue} --cache --fix",
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix",
     "lint-staged": "lint-staged --allow-empty",
-    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
+    "lint-staged:js": "eslint --ext .jsx,.ts,.tsx ",
     "new": "plop",
     "prepush": "pnpm run lint",
     "postinstall": "simple-git-hooks",
